# AI-SETTER

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  database_reactivation.py  ghl_booking.py  knowledgebase.py  lead_scoring.py  text_engine.py  voice_sales_rep.py
backend/app/api/: __init__.py  webhooks.py
backend/app/core/: config.py
backend/app/models/: __init__.py  webhook.py
backend/app/services/: __init__.py  supabase_client.py
frontend/: Dockerfile  index.html
frontend/src/: App.tsx
frontend/src/hooks/: useAuthenticatedQuery.ts
frontend/src/integrations/supabase/: client.ts
trigger/: processMessages.ts
